feat: ✨ add 4x osc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,7 @@
 {
-  "cSpell.words": [
-    "ADSR",
-    "vercel",
-    "webaudio",
-    "Worklet"
-  ],
+  "cSpell.words": ["ADSR", "vercel", "webaudio", "Worklet"],
   "files.associations": {
     "*.css": "tailwindcss"
-  }
+  },
+  "prettier.printWidth": 120
 }
